--- a/index.html
+++ b/index.html
@@ -275,9 +275,9 @@ padding:30px;
 <h2>Electronic Repairing Expert Advice & Solutions</h2>
 <p>LED TV & DTH Repair • Installation • Home Service Available</p>
 <p>Fast • Reliable • Affordable</p>
-<a href="tel:+91 9960112155" class="btn">📞 Call Now</a>
-<a href="https://wa.me/919960112155" class="btn">💬 WhatsApp Now</a>
-<button class="btn" onclick="openForm()">🏠 Book Home Service</button>
+<a href="tel:+91 9373125913" class="btn">📞 Call Now</a>
+<a href="https://wa.me/919373125913?text=Hello%20I%20want%20to%20book%20LED%20TV%20Home%20Service" 
+class="btn">🏠 Book Home Service</a>
 </header>
 
 <div class="trust">
@@ -318,7 +318,7 @@ padding:30px;
 
 <h3>Brands We Service</h3>
 <p>
-Samsung • LG • Sony • Mi • TCL • Vu • Panasonic • Philips<br>
+Samsung • LG • Sony • Mi • TCL • onida • Vu • Panasonic • Philips<br>
 Tata Play • Airtel Digital TV • Dish TV • Videocon d2h • sun direct
 </p>
 </section>
@@ -367,7 +367,7 @@ allowfullscreen>
 <!-- CONTACT -->
 <section class="section" id="contact">
 <h2>📞 Contact Us</h2>
-<p>Call / WhatsApp: 9960112155</p>
+<p>Call / WhatsApp: 9373125913</p>
 <p>Location: jalgaon bhokar </p>
 <p>Working Hours: 9 AM – 9 PM</p>
 <p>Home Service Available</p>
@@ -387,7 +387,7 @@ contact Lucky Tips Electronics today.
 <footer>
 Lucky Tips Electronics<br>
 LED TV & DTH Repair Service<br>
-Call: 9960112155<br>
+Call: 9373125913<br>
 Location: jalgaon bhokar 425002 maharashtra
 </footer>
 
@@ -402,7 +402,7 @@ Location: jalgaon bhokar 425002 maharashtra
 </div>
 </div>
 
-<a href="https://wa.me/919960112155" class="float-whatsapp">💬</a>
+<a href="https://wa.me/919373125913" class="float-whatsapp">💬</a>
 
 <script>
 function toggleMenu(){
