--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="google-site-verification" content="2Ag59fET8-1DWHZ16fJdc1QEzoTozhNJM5feqixiOms" />
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Lucky Tips Electronics</title>
@@ -421,3 +422,4 @@ document.getElementById("popupForm").style.display="none";
 
 </body>
 </html>
+
