--- a/index.html
+++ b/index.html
@@ -356,6 +356,7 @@ allowfullscreen>
 </div>
 
 </section>
+<meta name="description" content="Lucky Tips Electronics provides LED TV repair service in Jalgaon, Bhusawal, Chopda, Yawal, Raver, Amalner and nearby areas. Same day home service available.">
 
 <!-- REVIEWS -->
 <section class="section" id="reviews">
@@ -422,4 +423,5 @@ document.getElementById("popupForm").style.display="none";
 
 </body>
 </html>
+
 
