--- a/index.html
+++ b/index.html
@@ -277,8 +277,18 @@ padding:30px;
 <p>LED TV & DTH Repair • Installation • Home Service Available</p>
 <p>Fast • Reliable • Affordable</p>
 <a href="tel:+91 9373125913" class="btn">📞 Call Now</a>
-<a href="https://wa.me/919373125913?text=Hello%20I%20want%20to%20book%20LED%20TV%20Home%20Service" 
-class="btn">🏠 Book Home Service</a>
+<a href="https://forms.gle/cpF2cfuCM2yafcQG9" target="_blank">
+  <button style="background-color:#28a745;
+                 color:white;
+                 padding:12px 25px;
+                 font-size:18px;
+                 border:none;
+                 border-radius:8px;
+                 cursor:pointer;">
+    Book Service Now
+  </button>
+</a>
+
 </header>
 
 <div class="trust">
@@ -423,5 +433,6 @@ document.getElementById("popupForm").style.display="none";
 
 </body>
 </html>
+
 
 
