--- a/index.html
+++ b/index.html
@@ -288,7 +288,16 @@ padding:30px;
     Book Service Now
   </button>
 </a>
-
+<a href="https://wa.me/919XXXXXXXXX" target="_blank">
+  <button style="background-color:#25D366;
+                 color:white;
+                 padding:12px 25px;
+                 font-size:18px;
+                 border:none;
+                 border-radius:8px;">
+    WhatsApp Booking
+  </button>
+</a>
 </header>
 
 <div class="trust">
@@ -433,6 +442,7 @@ document.getElementById("popupForm").style.display="none";
 
 </body>
 </html>
+
 
 
 
