--- a/index.html
+++ b/index.html
@@ -276,29 +276,46 @@ padding:30px;
 <h2>Electronic Repairing Expert Advice & Solutions</h2>
 <p>LED TV & DTH Repair • Installation • Home Service Available</p>
 <p>Fast • Reliable • Affordable</p>
-<a href="tel:+91 9373125913" class="btn">📞 Call Now</a>
-<a href="https://forms.gle/cpF2cfuCM2yafcQG9" target="_blank">
-  <button style="background-color:#28a745;
-                 color:white;
-                 padding:12px 25px;
-                 font-size:18px;
-                 border:none;
-                 border-radius:8px;
-                 cursor:pointer;">
-    Book Service Now
-  </button>
+<div style="text-align:center; margin:15px 0;">
+
+<a href="tel:+919373125913" 
+   style="background-color:#FFC107;
+          color:black;
+          padding:12px 25px;
+          font-size:18px;
+          text-decoration:none;
+          border-radius:8px;
+          display:inline-block;
+          margin:5px;
+          font-weight:bold;">
+📞 Call Now
 </a>
-<a href="https://wa.me/91 9373125913" target="_blank">
-  <button style="background-color:#25D366;
-                 color:white;
-                 padding:12px 25px;
-                 font-size:18px;
-                 border:none;
-                 border-radius:8px;">
-    WhatsApp Booking
-  </button>
+
+<a href="https://forms.gle/cpF2cfuCM2yafcQG9" target="_blank"
+   style="background-color:#007bff;
+          color:white;
+          padding:12px 25px;
+          font-size:18px;
+          text-decoration:none;
+          border-radius:8px;
+          display:inline-block;
+          margin:5px;">
+📝 Book Service
 </a>
-</header>
+
+<a href="https://wa.me/919373125913" target="_blank"
+   style="background-color:#25D366;
+          color:white;
+          padding:12px 25px;
+          font-size:18px;
+          text-decoration:none;
+          border-radius:8px;
+          display:inline-block;
+          margin:5px;">
+💬 WhatsApp Booking
+</a>
+
+</div>
 
 <div class="trust">
 17+ Years Experience | 1000+ TVs Repaired | Genuine Parts Used
@@ -442,6 +459,7 @@ document.getElementById("popupForm").style.display="none";
 
 </body>
 </html>
+
 
 
 
