--- a/index.html
+++ b/index.html
@@ -276,46 +276,29 @@ padding:30px;
 <h2>Electronic Repairing Expert Advice & Solutions</h2>
 <p>LED TV & DTH Repair • Installation • Home Service Available</p>
 <p>Fast • Reliable • Affordable</p>
-<div style="text-align:center; margin:15px 0;">
-
-<a href="tel:+919373125913" 
-   style="background-color:#FFC107;
-          color:black;
-          padding:12px 25px;
-          font-size:18px;
-          text-decoration:none;
-          border-radius:8px;
-          display:inline-block;
-          margin:5px;
-          font-weight:bold;">
-📞 Call Now
+<a href="tel:+91 9373125913" class="btn">📞 Call Now</a>
+<a href="https://forms.gle/cpF2cfuCM2yafcQG9" target="_blank">
+  <button style="background-color:#28a745;
+                 color:white;
+                 padding:12px 25px;
+                 font-size:18px;
+                 border:none;
+                 border-radius:8px;
+                 cursor:pointer;">
+    Book Service Now
+  </button>
 </a>
-
-<a href="https://forms.gle/cpF2cfuCM2yafcQG9" target="_blank"
-   style="background-color:#007bff;
-          color:white;
-          padding:12px 25px;
-          font-size:18px;
-          text-decoration:none;
-          border-radius:8px;
-          display:inline-block;
-          margin:5px;">
-📝 Book Service
+<a href="https://wa.me/919XXXXXXXXX" target="_blank">
+  <button style="background-color:#25D366;
+                 color:white;
+                 padding:12px 25px;
+                 font-size:18px;
+                 border:none;
+                 border-radius:8px;">
+    WhatsApp Booking
+  </button>
 </a>
-
-<a href="https://wa.me/919373125913" target="_blank"
-   style="background-color:#25D366;
-          color:white;
-          padding:12px 25px;
-          font-size:18px;
-          text-decoration:none;
-          border-radius:8px;
-          display:inline-block;
-          margin:5px;">
-💬 WhatsApp Booking
-</a>
-
-</div>
+</header>
 
 <div class="trust">
 17+ Years Experience | 1000+ TVs Repaired | Genuine Parts Used
@@ -440,7 +423,7 @@ Location: jalgaon bhokar 425002 maharashtra
 </div>
 </div>
 
-<a href="https://wa.me/919373125913" class="float-whatsapp">💬</a>
+<a href="https://wa.me/91 9373125913" class="float-whatsapp">💬</a>
 
 <script>
 function toggleMenu(){
@@ -459,10 +442,3 @@ document.getElementById("popupForm").style.display="none";
 
 </body>
 </html>
-
-
-
-
-
-
-
